# AI-Agent-Orchestration-HW6

./: .env-example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  run.ps1
.claude/: settings.json
MATERIALS/: Gmail_calendar_agent_guide.md  ex06-Dual AI agent race via MCP servers_Summary.md  main-google-api-installtion-guid_Summary.md  software_submission_guidelines-V3_Summary.md
assets/: .gitkeep
config/: config.json  logging_config.json  rate_limits.json
docs/: AUDIT-2026-06-25.md  EDGE_CASES.md  PARTNER_ONBOARDING.md  PLAN.md  PRD.md  PRD_decision_strategy.md  PRD_email_reporting.md  PRD_game_engine.md  PRD_gatekeeper.md  PRD_gmail_calendar_agent.md  PRD_mcp_server.md  PRD_nl_communication.md  PRD_partner_interop.md  PROMPT_LOG.md  TODO.md
notebooks/: analysis.ipynb
results/: .gitkeep  TEST_REPORT.md  cloud_check.txt  gatekeeper_demo.txt  nl_match_sample.txt  sensitivity.txt  token_cost.txt
scripts/: check_mcp.py  check_partner.py  gatekeeper_demo.py  google_smoke.py  make_figures.py  mint_token.py  play_partner.py  play_remote.py  run_decide_server.py  run_mcp_server.py  run_series.py  sensitivity.py  token_report.py
src/marl_cop_thief/: __init__.py  __main__.py  main.py
src/marl_cop_thief/gui/: __init__.py  board_renderer.py  live_viewer.py  match_animator.py  overlays.py  theme.py
src/marl_cop_thief/sdk/: __init__.py  sdk.py
src/marl_cop_thief/services/: __init__.py  accumulator.py  barriers.py  board.py  bonus.py  decide_service.py  game_engine.py  interop_match.py  match_reporter.py  match_stream.py  nl_match.py  observation.py  orchestrator.py  partner_protocol.py  remote_match.py  reporting.py  scoring.py  series_runner.py  turn_pipeline.py
src/marl_cop_thief/services/google_agent/: __init__.py  calendar_writer.py  email_reader.py  meeting_extractor.py
src/marl_cop_thief/services/mcp/: __init__.py  host_server.py  message_bus.py  servers.py  tools.py
src/marl_cop_thief/services/nl_protocol/: __init__.py  ambiguity_handler.py  nl_decider.py  nl_decode.py  nl_encode.py  nl_speak.py  prompt_templates.py
src/marl_cop_thief/services/strategy/: __init__.py  evasion.py  geometry.py  heuristic.py  ortho_policy.py  smart_cop.py  smart_thief.py
src/marl_cop_thief/shared/: __init__.py  budget.py  config.py  constants.py  gatekeeper.py  gmail_client.py  google_api.py  google_auth.py  grid_math.py  llm_backend.py  llm_client.py  mcp_auth.py  mcp_transport.py  models.py  openai_backend.py  partner_client.py  rate_limit.py  token_cost.py  version.py
tests/: __init__.py  conftest.py
tests/integration/: test_gui.py  test_match_flow.py  test_mcp_servers.py  test_nl_match.py  test_subgame_flow.py
tests/unit/: test_barriers.py  test_board.py  test_bonus.py  test_budget.py  test_config.py  test_constants.py  test_decide_service.py  test_game_engine.py  test_gatekeeper.py  test_gatekeeper_concurrency.py  test_geometry.py  test_google_agent.py  test_google_api.py  test_grid_math.py  test_heuristic.py  test_interop_match.py  test_llm_backend.py  test_llm_client.py  test_match_reporter.py  test_match_stream.py  test_mcp_auth.py  test_mcp_transport.py  test_message_bus.py  test_models.py  test_nl_decider.py  test_nl_match_runner.py  test_nl_protocol.py  test_observation.py  test_orchestrator.py  test_ortho_policy.py  test_partner_client.py  test_partner_protocol.py  test_rate_limit.py  test_remote_match.py  test_reporting.py  test_scoring.py  test_sdk.py  test_series_runner.py  test_smart_cop.py  test_smart_thief.py  (+4 more)
