[project]
name = "marl-cop-thief"
version = "0.1.0"
description = "Dual AI agent Cop & Thief pursuit game over MCP servers (University of Haifa, Orchestration of AI Agents, Task 6)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sharbel Maroun" }]
dependencies = [
    "fastmcp>=3.4.2",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cop-thief = "marl_cop_thief.main:main"

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marl_cop_thief"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-branch --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/marl_cop_thief/main.py",
    "src/marl_cop_thief/__main__.py",
    "src/marl_cop_thief/services/mcp/servers.py",
    "src/marl_cop_thief/shared/google_auth.py",
    "src/marl_cop_thief/shared/openai_backend.py",
    "*/tests/*",
    "src/marl_cop_thief/gui/*",
    "src/marl_cop_thief/**/gui/*",
]

[tool.coverage.report]
fail_under = 85
