[project]
name = "marl-cop-thief"
version = "1.0.0"
description = "Dual AI agent Cop & Thief pursuit game over MCP servers (University of Haifa, Orchestration of AI Agents, Task 6)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sharbel Maroun" }]
dependencies = [
    "fastmcp>=3.4.2",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cop-thief = "marl_cop_thief.main:main"

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marl_cop_thief"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Every run also emits a machine-readable JUnit report (pass/fail per test) to results/.
# For an HTML coverage report: uv run pytest --cov-report=html:results/htmlcov
addopts = "--cov=src --cov-branch --cov-report=term-missing --cov-report=xml:results/coverage.xml --junitxml=results/junit.xml"

[tool.coverage.run]
source = ["src"]
branch = true
# Coverage is measured on business logic and is 100% (statement + branch) on the set
# below. Each omitted module is a thin I/O entrypoint/adapter that binds a socket, drives
# real OAuth browser consent, or calls a vendor SDK over the network — it cannot run in an
# offline unit test and holds no branching logic worth asserting. Guidelines §6.2 permits
# justified omissions (its own example omits main/tests/gui); each one is justified inline.
omit = [
    "src/marl_cop_thief/main.py",                       # CLI entrypoint: argparse + print only (guideline-omitted)
    "src/marl_cop_thief/__main__.py",                   # `python -m marl_cop_thief` shim
    "src/marl_cop_thief/services/mcp/servers.py",       # FastMCP tool-registration closures; server.run() binds a socket
    "src/marl_cop_thief/services/mcp/host_server.py",   # idem — shared-host server registration
    "src/marl_cop_thief/shared/google_auth.py",         # real OAuth browser consent + google client libs
    "src/marl_cop_thief/shared/openai_backend.py",      # real OpenAI SDK network call
    "*/tests/*",
    "src/marl_cop_thief/gui/*",                         # GUI rendering (guideline-omitted)
    "src/marl_cop_thief/**/gui/*",
]

[tool.coverage.report]
fail_under = 85
